style.css
*
{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html
{
    height: 100dvh;
    overflow: hidden;
}

body
{
    /* border: 3px solid red; */
    height: 100%;
    overflow-y: auto;
    background-color: #252422;
    color: whitesmoke;
    position: relative;
}

header
{
    height: 80px;
    width: 100%;
    background-color: #403D39;
    padding: 0 1rem;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.link_holder
{
    display: flex;
    flex-direction: row;
    padding: 5px;
    justify-content: center;
    align-items: center;
}

.nav_links
{
    text-decoration: none;
    color: whitesmoke;
    font-family: 'Quicksand', serif;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0 20px;
    height: 50px;
    transition: all 0.3s;
    margin: 5px;
}

.nav_links:hover
{
    background-color: #EB5E28;
    color: black;
}

.nav_links:active
{
    background-color: transparent;
    color: whitesmoke;
}

.hamburger {
    font-size: 24px;
    cursor: pointer;
}

#hamburger-icon
{
    display: none;
}

/* This is the title and logo container */
.title-logo
{
    height: 100%;
    display: flex;
    align-items: center;
}

.logo
{
    margin-right: 1rem;
}

.title, .logo
{
    color: #EB5E28;
    font-size: 2rem;
    font-family: 'Titillium Web', 'san-serif';
}

.main_home
{
    /* border: 3px solid green; */
    height: max-content;
    padding: 0.5rem 1.5rem;
    font-family: 'quicksand', serif;
}

.category_heading
{
    margin:  30px 0 0 0;
    font-size: 1.3rem;
}

/* Main section for all movies. */
.line1, .line2
{
    /* border: 3px solid red; */
    width: 100%;
    height: max-content;
    padding: 30px 0;
    display: flex;
    flex-direction: row;
    overflow-y: auto;
}

/* Movie information */

.link
{
    text-decoration: none;
    color: whitesmoke;
    display: inline-block;
    width: max-content;
    /* border: 3px solid hotpink; */
    padding: 0 10px 0 0;
    margin: 0 20px 0 0;
}

.fa-star
{
    color: #EB5E28;
}


.movie_image_holder
{
    height: max-content;
    width: 200px;
    margin: 10px 0 10px 0;
}

.movie_image
{
    border-radius: 10px;
    width: 100%;
    height: 320px;
    transition: all 0.2s;
}

/* Let the image increase in size when hover */
.movie_image:hover
{
    transform: scale(1.05);
}

.movie_info
{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.movie_name
{
    font-weight: bold;
    font-size: 1rem;
    margin: 10px 0;
    text-align: center;
}

/* Movie Pages desgin  */
.movie_main, .serie_main
{
    height: max-content;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 20px 10px;
}

.h1_movie_title, .h1_serie_title , #Ad_title
{
    font-size: 3rem;
    margin: 15px 0;
    text-align: center;
    font-family: 'Titillium Web', 'san-serif';
}

.text
{
    font-size: 1.1rem;
    font-family: 'Quicksand', serif;
}

/* General Styles */
.buttons_div {
    display: flex;
    justify-content: center;
    gap: 20px;
    margin: 20px 0;
}

.download_link_holder, .buttons_div
{
    /* border: 3px solid green; */
    width: max-content;
    display: flex;
    flex-direction: row;
    padding: 10px;
    width: 300px;
    justify-content: space-around;
    align-items: center;
}

.download_link, .buttons_div_button
{
    text-decoration: none;
    background-color: #EB5E28;
    padding: 10px 30px;
    border-radius: 10px;
    margin-top: 10px;
    font-family: 'quicksand', serif;
    font-weight: 700;
    font-size: 1.2rem;
    text-transform: uppercase;
    color: black;
    border: none;
    cursor: pointer;
}

.download_link:hover, .buttons_div_button:hover
{
    background-color: rgba(235, 95, 40, 0.76);
}

.download_link:active, .buttons_div_button:active
{
    cursor: wait;
}

.movie_frame, .serie_frame {
    width: 100%;
    max-width: 800px;
    height: auto;
    aspect-ratio: 16/9;
    border: 2px solid white;
}

/* Styling the Series Webpage */
.serie_links_holder
{
    width: 90%;
    height: max-content;
    display: flex;
    flex-direction: column;
}

.season_number_class
{
    font-size: 2.5rem;
    font-family: 'Quicksand', sans-serif;
}

.serie_button_class
{
    border: 2px solid #EB5E28;
    outline: none;
    text-transform: capitalize;
    font-size: 1.2rem;
    margin: 20px 0;
    width: 100%;
    height: 50px;
    background-color: transparent;
    color: white;
    text-align: left;
    cursor: pointer;
    transition: all 0.2s;
    padding: 10px;
    display: flex;
    align-items: center;
    font-family: 'Quicksand', sans-serif;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.serie_button_class:hover
{
    background-color: #EB5E28;
    color: black;
}

.serie_button_class:active
{
    background-color: transparent;
    color: #EB5E28;
    border: 2px solid transparent;
}

/* This is for the Contact link from index file */
.movie_contact
{
    /* border: 3px solid green; */
    height: max-content;
    padding: 0.5rem 1.5rem;
    font-family: 'quicksand', serif;
    display: flex;
    flex-direction: column; 
    align-items: center;
    justify-content: center;
    min-height: 100%;   
}

.contact-heading
{
    margin: 25px 0 25px 0;
}

form
{
    width: 90%;
    height: max-content;
}

.form_divisions
{
    width: 100%;
    display: flex;
    flex-direction: column; 
    padding: 0.5rem 0;
}

.contact_labels
{
    font-size: 1.5rem;
}

#name, #email, #subject
{
    width: 100%;
    height: 20px;
    padding: 1.8rem 0.5rem;
    font-size: 1.2rem;
    background-color: transparent;
    border-bottom: 2px solid #ff7640;
    color: white;
    outline: none;
    border-left: 0;
    border-right: 0;
    border-top: 0;
    font-family: 'quicksand', serif;
}
/* ... */

